[project]
name = "speculative-decoding-lab"
version = "0.0.1"
description = "Single-GPU LMCache × MTP batch-scaling experiments"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "httpx>=0.27",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "transformers>=4.46",
]

[project.optional-dependencies]
gpu = [
    # installed on the H100 host, not on dev macs
    # "sglang[all]>=0.4",
    # "lmcache>=0.3",
]
analysis = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.14",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
